--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "templatecrescentek",
+  "name": "myReactNativeTemplate",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -9,18 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.80.1",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
-    "@react-navigation/stack": "^7.4.2",
-    "@shopify/restyle": "^2.4.5",
-    "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-gesture-handler": "^2.27.1",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.5.1",
-    "react-native-screens": "^4.11.1"
+    "@react-native/new-app-screen": "0.80.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,7 +29,6 @@
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
-    "eslint-plugin-react": "^7.37.5",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
