--- a/template/ios/{{name}}.xcodeproj/xcshareddata/xcschemes/{{name}}.xcscheme
+++ b/template/ios/{{name}}.xcodeproj/xcshareddata/xcschemes/{{name}}.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "myReactNativeTemplate.app"
-               BlueprintName = "myReactNativeTemplate"
-               ReferencedContainer = "container:myReactNativeTemplate.xcodeproj">
+               BuildableName = "{{name}}.app"
+               BlueprintName = "{{name}}"
+               ReferencedContainer = "container:{{name}}.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "myReactNativeTemplateTests.xctest"
-               BlueprintName = "myReactNativeTemplateTests"
-               ReferencedContainer = "container:myReactNativeTemplate.xcodeproj">
+               BuildableName = "{{name}}Tests.xctest"
+               BlueprintName = "{{name}}Tests"
+               ReferencedContainer = "container:{{name}}.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "myReactNativeTemplate.app"
-            BlueprintName = "myReactNativeTemplate"
-            ReferencedContainer = "container:myReactNativeTemplate.xcodeproj">
+            BuildableName = "{{name}}.app"
+            BlueprintName = "{{name}}"
+            ReferencedContainer = "container:{{name}}.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "myReactNativeTemplate.app"
-            BlueprintName = "myReactNativeTemplate"
-            ReferencedContainer = "container:myReactNativeTemplate.xcodeproj">
+            BuildableName = "{{name}}.app"
+            BlueprintName = "{{name}}"
+            ReferencedContainer = "container:{{name}}.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
