--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "{{name}}",
-  "version": "0.0.1",
-  "private": true,
+  "name": "templatecrescentek",
+  "version": "0.0.42",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -21,7 +20,8 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -39,12 +39,19 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.37.5",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+    "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
