--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "test": "jest",
+    "postinstall":"npx husky install"
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.1",
@@ -21,7 +23,8 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -39,12 +42,19 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.37.5",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
