--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ DerivedData
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
+xcode.env
+ios/Podfile.lock
 
 # Android/IntelliJ
 #
@@ -40,6 +42,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+package-lock.json
 
 # fastlane
 #
@@ -73,3 +76,5 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+package-lock.json
+package-lock.json
