--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "templatecrescentek",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -9,10 +9,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@shopify/restyle": "^2.4.5",
     "axios": "^1.10.0",
     "react": "19.1.0",
@@ -21,7 +24,9 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-simple-toast": "^3.3.2",
+    "react-native-svg": "^15.12.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -49,7 +54,7 @@
   "engines": {
     "node": ">=18"
   },
-    "husky": {
+  "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
     }
