--- a/template/package.json
+++ b/template/package.json
@@ -9,13 +9,16 @@
     "start": "react-native start",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest",
-    "postinstall":"npx husky install"
+    "postinstall": "npx husky install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@shopify/restyle": "^2.4.5",
     "axios": "^1.10.0",
     "react": "19.1.0",
@@ -24,7 +27,9 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-simple-toast": "^3.3.2",
+    "react-native-svg": "^15.12.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
